con nuevo diseño

--- a/SanJuanSaludAPP/www/css/index.css
+++ b/SanJuanSaludAPP/www/css/index.css
@@ -1,3 +1,4 @@
+/*
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
@@ -95,3 +96,4 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+*/
