--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -89,6 +89,10 @@ body {
     width: 100%;
 }
 
+.swiper-slide{
+    min-height: 250px;
+}
+
 @font-face {
     font-family: 'Framework7 Icons';
     font-style: normal;
