con el modal de departamentos

--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -93,6 +93,7 @@ body {
     min-height: 250px;
 }
 
+/*
 @font-face {
     font-family: 'Framework7 Icons';
     font-style: normal;
@@ -125,3 +126,5 @@ body {
     -moz-font-feature-settings: "liga";
     font-feature-settings: "liga";
 }
+
+*/
