--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -4264,11 +4264,13 @@ body {
 
 .boton {
     height: 10em !important;
+    color: #940f12 !important;
 }
 
 .boton-chico {
 
     height: 5em !important;
+    color: #940f12 !important;
 }
 
 .center img {
@@ -4327,3 +4329,98 @@ body {
 }
 
 */
+
+.page {
+
+    background-color: #940f12 !important;
+}
+
+.navbar {
+
+    background-color: #940f12 !important;
+
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.swiper-container {
+    -webkit-border-radius: 5px;
+    border-radius: 2px !important;
+}
+
+#sombraSlide {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+}
+
+@font-face {
+    font-family: 'Framework7 Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url("../fonts/Framework7Icons-Regular.eot");
+    src: local('Framework7 Icons'),
+    local('Framework7Icons-Regular'),
+    url("../fonts/Framework7Icons-Regular.woff2") format("woff2"),
+    url("../fonts/Framework7Icons-Regular.woff") format("woff"),
+    url("../fonts/Framework7Icons-Regular.ttf") format("truetype");
+}
+
+.f7-icons, .framework7-icons {
+    font-family: 'Framework7 Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 25px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    -webkit-font-feature-settings: "liga";
+    -moz-font-feature-settings: "liga=1";
+    -moz-font-feature-settings: "liga";
+    font-feature-settings: "liga";
+}
+
+.popup {
+    color: white;
+    background-color: #940f12 !important;
+}
+
+.item-input input {
+    color: white !important;
+}
+
+.asdf {
+    color: white !important;
+}
+
+::-webkit-input-placeholder{
+
+    color: #aaa !important;
+}
+
+.item-input select option{
+
+    color: #000 !important;
+}
+
+.item-input select {
+
+    color: #fff !important;
+}
+
+.item-title {
+    color: #fff !important;
+}
+
+textarea {
+    color: #fff !important;
+}
+
+.buttons-row a img{
+
+    height: 7em;
+}
