--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -1,4 +1,10 @@
-﻿
+﻿.color-h3
+{
+    color: #fff;
+}
+
+#map-canvas { height: 100% }
+
 .boton {
     height: 10em !important;
     color: #940f12 !important;
