con status bar overlay

--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -134,3 +134,9 @@ textarea {
 .statusbar-overlay {
     background: #940f12;
 }
+
+.popup p {
+
+    text-align: justify;
+    text-justify: inter-word;
+}
