--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -140,3 +140,26 @@ textarea {
     text-align: justify;
     text-justify: inter-word;
 }
+
+.listaBlanca {
+
+    color: #940f12 !important;
+    background-color: white !important;
+}
+
+.titluloListaBlanca{
+
+    color: #940f12 !important;
+
+}
+
+@font-face {
+    font-family: 'Swiss';
+    src: url('/fonts/Swiss.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+    font-family: 'Swiss' !important;
+}
