con navbar en cada menu

--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -148,3 +148,13 @@ textarea {
 
     margin-right: 1em;
 }
+
+.navbarMenu {
+    font-size: smaller !important;
+
+}
+
+.navbarMenu p {
+
+    margin-right: 1em;
+ }
