--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -4,32 +4,6 @@
 .page{
     background-color: #ccc;
 }
-/*
-.page{
-    background-color: #ccc;
-}
-*/
-/*
-.color-h3
-{
-    color: #fff;
-}
-
-.blancaynegrita{
-    color: #fff;
-    font-weight: bold;
-}
-
-.blancaynegritag{
-    color: #940f12;
-    text-transform: uppercase;
-    text-align: center;
-
-}
-
-
-*/
-
 
 .blancaynegrita{
     font-weight: bold;
@@ -44,19 +18,7 @@
 
 #map-canvas { height: 100% }
 
-/*
-.button-fill  {
-    background-color: #940f12 !important;
-    color: #fff ;
-}
 
-.boton {
-    height: 10em !important;
-    color: #fff !important;
-    line-height: 1em !important;
-
-}
-*/
 .boton {
     color: #940f12 !important;
     height: 10em !important;
@@ -67,13 +29,7 @@
     max-height: 250px;
 }
 
-/*
-.boton-chico {
 
-    height: 3em !important;
-    color: #fff !important;
-}
-*/
 .boton-chico {
     color: #940f12 !important;
     height: 3em !important;
@@ -102,15 +58,6 @@
 
 }
 
-
-/*
-.navbar {
-
-    /background-color: #940f12 !important;
-
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-}
-*/
 .navbar {
     background-color: #940f12 !important;
     box-shadow:0px 7px 6px 0px rgba(0,0,0,0.22);
@@ -158,52 +105,11 @@
     font-feature-settings: "liga";
 }
 
-/*
-.popup {
-    color: white;
-    background-color: #940f12 !important;
-    display: block !important;
-}
-*/
-
-/*
-.item-input input {
-    color: white !important;
-}
-
-::-webkit-input-placeholder{
-
-    color: #aaa !important;
-}
-
-.item-input select option{
-
-    color: #000 !important;
-}
-
-.item-input select {
-
-    color: #fff !important;
-}
-
-.item-title {
-    color: #fff !important;
-}
-
-textarea {
-    color: #fff !important;
-    height: 2em !important;
-}
-*/
 .buttons-row a img{
 
     height: 5em;
 }
-/*
-.statusbar-overlay {
-    background: #940f12;
-}
-*/
+
 .popup p {
 
     text-align: justify;
@@ -224,14 +130,6 @@ textarea {
 
     margin-right: 1em;
  }
-/*
-.background-light {
-    padding: 1em;
-    background: #aa2524 !important;
-    border-radius: 2px;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
-*/
 
 .background-light {
     padding: 1em;
@@ -242,31 +140,6 @@ textarea {
 .list-block .accordion-item .content-block, .list-block .accordion-item .list-block{
     padding-left: 50px;
 }
-/*
-.content-list {
-
-    background-color: #940f12;
-}
-*/
-/*
-.background-light-noticia {
-    margin: 1em;
-    background: #aa2524 !important;
-    border-radius: 2px;
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-
-}
-*/
-/*
-.toolbar {
-    background-color: #940f12 !important;
-    height: 2em;
-    z-index: 100000;
-    text-align: center !important;
-    font-size: small;
-    box-shadow:  0px -3px 22px 1px rgba(0,0,0,0.75);
-}
-*/
 
 .toolbar {
     background-color: #940f12 !important;
@@ -292,23 +165,6 @@ textarea {
     box-shadow:0px 7px 6px 0px rgba(0,0,0,0.22);
 
 }
-/*
-#noticia {
-
-    color: white;
-}
-
-.card-content-inner {
-
-    background-color: #ddd;
-}
-
-.linkAyuda a {
-
-    color: #000 !important;
-    margin-left: 1em;
-}
-*/
 
 .linkAyuda a {
     color: #000;
@@ -322,6 +178,22 @@ textarea {
 
 .tituloBlanco {
     background-color: white;
+}
+
+.boton-navigation {
+
+    color: white !important;
+    background-color: #f44336 !important;
+}
+
+.icono-bus {
+
+    background: url("../images/bus.svg");
+
+    display: inline-block;
+    height: 25px;
+    width: 25px;
+
 }
 
 .list-block{
