con envio ajax de formulario

--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -221,3 +221,8 @@
 .statusbar-overlay {
     background: #940f12 !important;
 }
+
+.campoErroneo {
+
+    box-shadow: 0px 0px 18px 6px rgba(255,0,0,1);
+}
