boton y plugin de llamada al 107

--- a/SanJuanSaludAPP/www/css/style.css
+++ b/SanJuanSaludAPP/www/css/style.css
@@ -1,4 +1,8 @@
-﻿.videoWrapper {
+﻿
+.justificado{
+    text-align: justify;
+}
+.videoWrapper {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
